integration_tests/codegen_fail/fail/scalar/derive_input/attr_transparent_multiple_named_fields.rs
use juniper::graphql_scalar;

#[graphql_scalar(transparent)]
struct Scalar {
    id: i32,
    another: i32,
}

fn main() {}
